# Vacation-Planner

./: .env.example  .gitignore  README.md  app_backend.py  app_frontend.py  instruction.md  pyproject.toml  requirements.txt
data/: booking_store.json  user_calendar.json  user_preferences.json
docs/: Solution_Report.md  Vulnerabilities_and_Risks.md
src/agents/: planner.py
src/data/: user_calendar.py  user_preferences.py
src/tools/: booking_tool.py  calendar_tool.py  flight_search.py  hotel_booking.py  travel_tool.py
